# KTX-Software

./: .gitattributes  .gitconfig  CMakeLists.txt  LICENSE.md  README.md  abstract.html  authors.html  dir_0eb6c3330d6cb51c55e38234f86914e8.html  dir_2d084546ff008293419e5a6cd32fb27e.html  dir_b31d54d5631803016a26f28213a41162.html  index.html  js_bindings.html  ktxtools.html  libktx_js.html  libktx_main.html  msc_basis_transcoder.html  pages.html  todo.html
.reuse/: dep5
ktxtools/: dir_09422af9f6e39cd219a538ae2d9ff0a8.html  dir_21a04a93d00272cf501aa9cc1b9ece4b.html  dir_49c59200b1838f4c537a92200e5de011.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_a33ac96fab323650bfd87b7a47549660.html  dir_e326a70ec4ca1fd26ce6fd35942b1c22.html  index.html  ktx2check.html  ktx2ktx2.html  ktxinfo.html  ktxsc.html  pages.html  toktx.html
libktx/: annotated.html  classes.html  classktxHashList.html  classktxHashListEntry.html  deprecated.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  glloader_8c-example.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__ktx__glloader.html  group__ktx__vkloader.html  group__reader.html  group__writer.html  index.html  ktx_8h.html  libktx_history.html  license.html  modules.html  pages.html  strings_8c.html  structktxBasisParams.html  structktxOrientation.html  structktxTexture.html  structktxTexture1.html  structktxTexture2.html  structktxTextureCreateInfo.html  structktxTexture__vtbl.html  structktxVulkanDeviceInfo.html  (+2 more)
